# ipylangchat

./: LICENSE  README.md  deno.json  example.ipynb  pyproject.toml
.github/workflows/: publish.yml
src/ipylang/: __init__.py
src/ipylang/static/: widget.css  widget.js
src/ipylangchat/: __init__.py
src/ipylangchat/static/: widget.css  widget.js
