[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ipylang"
version = "0.0.1"
dependencies = ["anywidget", "langchain_core"]
readme = "README.md"

[project.optional-dependencies]
dev = ["watchfiles", "jupyterlab"]

# automatically add the dev feature to the default env (e.g., hatch shell)
[tool.hatch.envs.default]
features = ["dev"]
