[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ipylangchat"
version = "0.0.1"
dependencies = ["anywidget", "langchain_core"]
readme = "README.md"

[project.optional-dependencies]
dev = [
    "watchfiles", 
    "jupyterlab", 
    "langchain-chroma",
    "langchain-community",
    "langchain-huggingface",
    "langchain-openai",
    "langchain-text-splitters",
]

# automatically add the dev feature to the default env (e.g., hatch shell)
[tool.hatch.envs.default]
features = ["dev"]
